fix overflow issues for small screens and long non-breaking titles

--- a/css/main.css
+++ b/css/main.css
@@ -181,6 +181,7 @@ a:hover   { color: #222; }
   letter-spacing: -1.75px;
   line-height: 1;
   font-weight: 100;
+  overflow: hidden;
 }
 
 .post-header h1 a,
